[gd_scene load_steps=5 format=3 uid="uid://bt47drtgede17"]

[ext_resource type="Script" path="res://scripts/BattleBayashi.gd" id="1_4xllx"]
[ext_resource type="Texture2D" uid="uid://brox1xnwdqlcy" path="res://assets/graphics/battle/background.png" id="2_x68aa"]
[ext_resource type="FontFile" uid="uid://dbsbr3tb35w2o" path="res://assets/fonts/8bitoperator.ttf" id="3_hvoew"]
[ext_resource type="Texture2D" uid="uid://cfpgk836k62my" path="res://assets/graphics/sprites/monster/bayashi/bayashi.png" id="4_ihsw3"]

[node name="BattleBayashi" type="Node2D"]
script = ExtResource("1_4xllx")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 240)
texture = ExtResource("2_x68aa")

[node name="ActionButtons" type="CanvasLayer" parent="."]

[node name="FightButton" type="Button" parent="ActionButtons"]
offset_left = 24.0
offset_top = 445.0
offset_right = 160.0
offset_bottom = 476.0
theme_override_fonts/font = ExtResource("3_hvoew")
text = "Fight"

[node name="ActButton" type="Button" parent="ActionButtons"]
offset_left = 197.0
offset_top = 444.0
offset_right = 316.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("3_hvoew")
text = "Act"

[node name="ItemButton" type="Button" parent="ActionButtons"]
offset_left = 366.0
offset_top = 444.0
offset_right = 492.0
offset_bottom = 475.0
theme_override_fonts/font = ExtResource("3_hvoew")
text = "Item
"

[node name="Spare Button" type="Button" parent="ActionButtons"]
offset_left = 527.0
offset_top = 444.0
offset_right = 616.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("3_hvoew")
text = "Spare
"

[node name="Labels" type="CanvasLayer" parent="."]

[node name="MonsterHp" type="Label" parent="Labels"]
offset_left = 300.0
offset_top = 61.0
offset_right = 340.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="PlayerHp" type="Label" parent="Labels"]
offset_left = 9.0
offset_top = 267.0
offset_right = 49.0
offset_bottom = 290.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="CanvasLayer" type="CanvasLayer" parent="Labels"]

[node name="Situation1" type="Label" parent="Labels/CanvasLayer"]
offset_left = 19.0
offset_top = 316.0
offset_right = 623.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Situation2" type="Label" parent="Labels/CanvasLayer"]
offset_left = 19.0
offset_top = 360.0
offset_right = 619.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Situation3" type="Label" parent="Labels/CanvasLayer"]
offset_left = 21.0
offset_top = 404.0
offset_right = 619.0
offset_bottom = 427.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Enemy" type="Sprite2D" parent="."]
position = Vector2(321, 189)
scale = Vector2(3, 3)
texture = ExtResource("4_ihsw3")

[node name="SquareButtons" type="CanvasLayer" parent="."]

[node name="Action1" type="Button" parent="SquareButtons"]
offset_left = 19.0
offset_top = 316.0
offset_right = 284.0
offset_bottom = 341.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Action2" type="Button" parent="SquareButtons"]
offset_left = 20.0
offset_top = 359.0
offset_right = 285.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Action3" type="Button" parent="SquareButtons"]
offset_left = 21.0
offset_top = 401.0
offset_right = 286.0
offset_bottom = 426.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Action4" type="Button" parent="SquareButtons"]
offset_left = 355.0
offset_top = 315.0
offset_right = 620.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Action5" type="Button" parent="SquareButtons"]
offset_left = 355.0
offset_top = 358.0
offset_right = 620.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("3_hvoew")

[node name="Action6" type="Button" parent="SquareButtons"]
offset_left = 357.0
offset_top = 398.0
offset_right = 622.0
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("3_hvoew")

[connection signal="pressed" from="ActionButtons/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="ActionButtons/ActButton" to="." method="_on_act_button_pressed"]
[connection signal="pressed" from="ActionButtons/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="ActionButtons/Spare Button" to="." method="_on_spare_button_pressed"]
[connection signal="pressed" from="SquareButtons/Action1" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="SquareButtons/Action2" to="." method="_on_action_2_pressed"]
[connection signal="pressed" from="SquareButtons/Action3" to="." method="_on_action_3_pressed"]
[connection signal="pressed" from="SquareButtons/Action4" to="." method="_on_action_4_pressed"]
[connection signal="pressed" from="SquareButtons/Action5" to="." method="_on_action_5_pressed"]
[connection signal="pressed" from="SquareButtons/Action6" to="." method="_on_action_6_pressed"]
